--- a/simple-junit-test/pom.xml
+++ b/simple-junit-test/pom.xml
@@ -3,14 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.tomasz.goralski</groupId>
-		<artifactId>junit-test</artifactId>
-		<version>1.0</version>
-	</parent>
+	<!-- <parent> -->
+	<!-- <groupId>com.tomasz.goralski</groupId> -->
+	<!-- <artifactId>junit-test</artifactId> -->
+	<!-- <version>1.0</version> -->
+	<!-- </parent> -->
 	<groupId>com.tomasz.goralski</groupId>
 	<artifactId>simple-junit-test</artifactId>
 	<version>1.0</version>
+	<packaging>jar</packaging>
 	<name>simple-junit-test</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -22,6 +23,29 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>1.7.0</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.0</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.0</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.14</version>
 		</dependency>
 	</dependencies>
 	<build>
